--- a/FedAvg_PerturbedGD_pass.ipynb
+++ b/FedAvg_PerturbedGD_pass.ipynb
@@ -30,9 +30,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "physical_devices = tf.config.list_physical_devices('GPU')\n",
+    "try:\n",
+    "    # Disable first GPU\n",
+    "    tf.config.set_visible_devices(physical_devices[1], 'GPU')\n",
+    "    logical_devices = tf.config.list_logical_devices('GPU')\n",
+    "    # Logical device was not created for first GPU\n",
+    "    assert len(logical_devices) == len(physical_devices) - 1\n",
+    "except:\n",
+    "    # Invalid device or cannot modify virtual devices once initialized.\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class clint_k():\n",
     "    def __init__(self, name, dataset, model, \n",
-    "                optimizer = tf.keras.optimizers.SGD(learning_rate=1e-3),\n",
+    "                optimizer = tf.keras.optimizers.Adam(learning_rate=1e-3), # default\n",
     "                loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "                metrics = [tf.keras.metrics.SparseCategoricalAccuracy()]\n",
     "                ):\n",
@@ -55,27 +73,27 @@
     "#         self.model.set_weights(weights)\n",
     "        \n",
     "\n",
-    "    def warming_up(self):\n",
-    "        print('Warming up process, setting slot from trainable weight')\n",
+    "#     def warming_up(self):\n",
+    "#         print('Warming up process, setting slot from trainable weight')\n",
     "\n",
-    "        vp = self.model.get_weights()\n",
+    "#         vp = self.model.get_weights()\n",
     "        \n",
-    "        self.model.fit(self.dataset, verbose = 0)\n",
-    "        self.model.set_weights(vp)\n",
-    "        self.optimizer.set_params(self.model)\n",
-    "#         \n",
+    "#         self.model.fit(self.dataset, verbose = 0)\n",
+    "#         self.model.set_weights(vp)\n",
+    "#         self.optimizer.set_params(self.model)\n",
+    "# #         \n",
     "        \n",
-    "        self.warmingUp = True\n",
-    "    def local_update(self, epochs = 1):\n",
+    "#         self.warmingUp = True\n",
+    "#     def local_update(self, epochs = 1):\n",
     "\n",
-    "        if not self.warmingUp:\n",
-    "            self.warming_up()\n",
-    "            self.warmingUp = True\n",
-    "            print('self.warmingUp finish')\n",
-    "        else:\n",
-    "            self.optimizer.set_params(self.model)\n",
-    "        self.model.fit(self.dataset, epochs=epochs)\n",
-    "#         return \n",
+    "#         if not self.warmingUp:\n",
+    "#             self.warming_up()\n",
+    "#             self.warmingUp = True\n",
+    "#             print('self.warmingUp finish')\n",
+    "#         else:\n",
+    "#             self.optimizer.set_params(self.model)\n",
+    "#         self.model.fit(self.dataset, epochs=epochs)\n",
+    "# #         return \n",
     "\n",
     "\n",
     "\n",
@@ -87,6 +105,71 @@
     "        config['loss_fn'] = self.loss_fn\n",
     "        config['warmingUp'] = self.warmingUp\n",
     "        return self.attri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PerturbedGradientDescent(tf.keras.optimizers.SGD):\n",
+    "    def __init__(self,\n",
+    "              name=\"PGD\",\n",
+    "              mu=0.01,\n",
+    "               **kwargs):\n",
+    "        super().__init__(name = name, **kwargs)\n",
+    "#         print(name)\n",
+    "\n",
+    "        self._set_hyper(\"prox_mu\", mu)\n",
+    "        # Tensor versions of the constructor arguments, created in _prepare().\n",
+    "        self._lr_t = None\n",
+    "        self._mu_t = None\n",
+    "        self.vstar = None\n",
+    "        \n",
+    "        self._lr_t = tf.convert_to_tensor(self._hyper['learning_rate'], name=\"learning_rate\")\n",
+    "        self._mu_t = tf.convert_to_tensor(self._hyper['prox_mu'], name=\"prox_mu\")\n",
+    "    \n",
+    "\n",
+    "    def _create_slots(self, var_list):\n",
+    "\n",
+    "        for var in var_list:\n",
+    "            self.add_slot(var, \"vt\")\n",
+    "        for var in var_list:\n",
+    "            self.add_slot(var, \"grad\")\n",
+    "\n",
+    "    @tf.function\n",
+    "    def _resource_apply_dense(self, grad, var):\n",
+    "        lr_t = tf.cast(self._lr_t, var.dtype.base_dtype)\n",
+    "        mu_t = tf.cast(self._mu_t, var.dtype.base_dtype)\n",
+    "        \n",
+    "        vp = self.get_slot(var, \"vt\") # vt = this client's this layer traiable variable \n",
+    "        \n",
+    "        var_update = var.assign_sub(lr_t*(grad + mu_t*(var-vp)))\n",
+    "        var.assign(var_update)\n",
+    "#         return tf.raw_ops.ResourceApplyGradientDescent(\n",
+    "#           var=var_update.handle,\n",
+    "#           alpha=lr_t,\n",
+    "#           delta=grad,\n",
+    "#           use_locking=self._use_locking)\n",
+    "    \n",
+    "    def get_config(self):\n",
+    "        config = super().get_config()\n",
+    "        config.update({\n",
+    "            \"learning_rate\": self._serialize_hyperparameter(\"learning_rate\"),\n",
+    "            \"decay\": self._initial_decay,\n",
+    "            \"momentum\": self._serialize_hyperparameter(\"momentum\"),\n",
+    "            \"nesterov\": self.nesterov,\n",
+    "            \"prox_mu\": self._mu_t.numpy(),\n",
+    "        })\n",
+    "        return config\n",
+    "    \n",
+    "    def set_params(self, model):\n",
+    "        for weights in model.trainable_variables:\n",
+    "            vp = self.get_slot(weights, \"vt\") \n",
+    "            vp.assign(weights)\n",
+    "#             print(vp.name)\n",
+    "            "
    ]
   },
   {
@@ -111,6 +194,20 @@
     "    return subset\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -149,7 +246,7 @@
    "source": [
     "hyper_para = dict()\n",
     "\n",
-    "hyper_para['C'] = 0.3\n",
+    "hyper_para['C'] = 0.8\n",
     "\n",
     "if not 'k_' in list(locals().keys()):\n",
     "    hyper_para['K'] = 12\n",
@@ -217,8 +314,8 @@
     "Gmodel = simplecnn('server_model')\n",
     "loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
     "metrics = [tf.keras.metrics.SparseCategoricalAccuracy()]\n",
-    "optimizer = tf.keras.optimizers.SGD()\n",
-    "# optimizer = PerturbedGradientDescent(mu=hyper_para['mu']\n",
+    "# optimizer = tf.keras.optimizers.SGD()\n",
+    "optimizer = PerturbedGradientDescent(mu=hyper_para['mu'])\n",
     "Gmodel.compile(optimizer, loss_fn, metrics)\n",
     "\n",
     "# print(Gmodel.trainable_variables)\n",
@@ -285,18 +382,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n",
-      "<tensorflow.python.keras.optimizer_v2.gradient_descent.SGD object at 0x7f90f4665a90>\n"
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n",
+      "<__main__.PerturbedGradientDescent object at 0x7efb343981d0>\n"
      ]
     }
    ],
@@ -318,8 +415,8 @@
      "text": [
       "---\n",
       "Evaluate on Global test data on Gmodel\n",
-      "79/79 [==============================] - 0s 2ms/step - loss: 2.3024 - sparse_categorical_accuracy: 0.1013\n",
-      "test loss, test acc: [2.302372932434082, 0.10130000114440918] \n",
+      "79/79 [==============================] - 0s 2ms/step - loss: 2.3029 - sparse_categorical_accuracy: 0.0864\n",
+      "test loss, test acc: [2.3029325008392334, 0.08640000224113464] \n",
       "\n"
      ]
     }
@@ -339,7 +436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "10\n"
      ]
     }
    ],
@@ -349,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -364,12 +461,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b4164f30f8b4f66a748ee7853e39bc1",
+       "model_id": "0290c9030647456e857f57166c173483",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=50.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -379,90 +476,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n",
-      "selected client sample sum 20000 60000\n"
+      "\n"
      ]
     }
    ],
@@ -477,7 +491,7 @@
     "\n",
     "#     print(choice)\n",
     "\n",
-    "rounds = 100\n",
+    "rounds = 50\n",
     "# start training\n",
     "\n",
     "all_samples = 0\n",
@@ -602,9 +616,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---\n",
+      "Evaluate on Global test data on Gmodel\n",
+      "79/79 [==============================] - 0s 2ms/step - loss: 1.9742 - sparse_categorical_accuracy: 0.5447\n",
+      "test loss, test acc: [1.9741734266281128, 0.544700026512146] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"---\\nEvaluate on Global test data on Gmodel\")\n",
     "results = Gmodel.evaluate(X_test[:], y_test[:], batch_size=128)\n",
