--- a/client/client_utils.ipynb
+++ b/client/client_utils.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting client_utils.py\n"
+     ]
+    }
+   ],
    "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class clint_k():\n",
+    "%%writefile client_utils.py\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "class client():\n",
     "    def __init__(self, name, dataset, model, \n",
     "                optimizer = tf.keras.optimizers.SGD(learning_rate=1e-3),\n",
     "                loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
@@ -38,7 +40,6 @@
     "        config['model'] = self.model\n",
     "        config['optimizer'] = self.optimizer\n",
     "        config['loss_fn'] = self.loss_fn\n",
-    "        config['warmingUp'] = self.warmingUp\n",
     "        return self.attri"
    ]
   },
