--- a/client/client_train.ipynb
+++ b/client/client_train.ipynb
@@ -319,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "32768"
+       "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,8 +336,15 @@
    "source": [
     "import os\n",
     "\n",
-    "result = os.system('git clone https://gitlab.aiacademy.tw/junew/federated_aia_test.git')\n",
-    "result"
+    "run_cmd = lambda cmd_lis:[os.popen(i).read() for i in cmd_lis.split('\\n')]\n",
+    "\n",
+    "cmd_lis = '''git clone https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git\n",
+    "git branch {key}\n",
+    "git fetch\n",
+    "git checkout {new_branch}\n",
+    "'''.format(key=item_dict['key'], new_branch=key)\n",
+    "\n",
+    "\n"
    ]
   },
   {
