new branck for client

--- a/client/client_train.ipynb
+++ b/client/client_train.ipynb
@@ -194,65 +194,65 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "25/25 - 0s - loss: 2.3030 - sparse_categorical_accuracy: 0.0000e+00 - val_loss: 2.3021 - val_sparse_categorical_accuracy: 0.0000e+00\n",
+      "25/25 - 0s - loss: 2.3006 - sparse_categorical_accuracy: 0.0137 - val_loss: 2.2998 - val_sparse_categorical_accuracy: 0.0200\n",
       "Epoch 2/30\n",
-      "25/25 - 0s - loss: 2.3013 - sparse_categorical_accuracy: 0.0000e+00 - val_loss: 2.3005 - val_sparse_categorical_accuracy: 0.0000e+00\n",
+      "25/25 - 0s - loss: 2.2990 - sparse_categorical_accuracy: 0.0525 - val_loss: 2.2982 - val_sparse_categorical_accuracy: 0.0900\n",
       "Epoch 3/30\n",
-      "25/25 - 0s - loss: 2.2997 - sparse_categorical_accuracy: 0.0000e+00 - val_loss: 2.2988 - val_sparse_categorical_accuracy: 0.0000e+00\n",
+      "25/25 - 0s - loss: 2.2974 - sparse_categorical_accuracy: 0.1912 - val_loss: 2.2965 - val_sparse_categorical_accuracy: 0.3150\n",
       "Epoch 4/30\n",
-      "25/25 - 0s - loss: 2.2979 - sparse_categorical_accuracy: 0.0000e+00 - val_loss: 2.2970 - val_sparse_categorical_accuracy: 0.0000e+00\n",
+      "25/25 - 0s - loss: 2.2956 - sparse_categorical_accuracy: 0.4812 - val_loss: 2.2948 - val_sparse_categorical_accuracy: 0.6650\n",
       "Epoch 5/30\n",
-      "25/25 - 0s - loss: 2.2961 - sparse_categorical_accuracy: 0.0025 - val_loss: 2.2951 - val_sparse_categorical_accuracy: 0.0000e+00\n",
+      "25/25 - 0s - loss: 2.2939 - sparse_categorical_accuracy: 0.7925 - val_loss: 2.2930 - val_sparse_categorical_accuracy: 0.9000\n",
       "Epoch 6/30\n",
-      "25/25 - 0s - loss: 2.2941 - sparse_categorical_accuracy: 0.0262 - val_loss: 2.2931 - val_sparse_categorical_accuracy: 0.0250\n",
+      "25/25 - 0s - loss: 2.2920 - sparse_categorical_accuracy: 0.9450 - val_loss: 2.2911 - val_sparse_categorical_accuracy: 0.9850\n",
       "Epoch 7/30\n",
-      "25/25 - 0s - loss: 2.2921 - sparse_categorical_accuracy: 0.1562 - val_loss: 2.2910 - val_sparse_categorical_accuracy: 0.2150\n",
+      "25/25 - 0s - loss: 2.2901 - sparse_categorical_accuracy: 0.9962 - val_loss: 2.2892 - val_sparse_categorical_accuracy: 0.9950\n",
       "Epoch 8/30\n",
-      "25/25 - 0s - loss: 2.2900 - sparse_categorical_accuracy: 0.4437 - val_loss: 2.2888 - val_sparse_categorical_accuracy: 0.5650\n",
+      "25/25 - 0s - loss: 2.2881 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2871 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 9/30\n",
-      "25/25 - 0s - loss: 2.2877 - sparse_categorical_accuracy: 0.7738 - val_loss: 2.2864 - val_sparse_categorical_accuracy: 0.8700\n",
+      "25/25 - 0s - loss: 2.2859 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2850 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 10/30\n",
-      "25/25 - 0s - loss: 2.2853 - sparse_categorical_accuracy: 0.9563 - val_loss: 2.2839 - val_sparse_categorical_accuracy: 0.9850\n",
+      "25/25 - 0s - loss: 2.2837 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2827 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 11/30\n",
-      "25/25 - 0s - loss: 2.2827 - sparse_categorical_accuracy: 0.9937 - val_loss: 2.2812 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2813 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2802 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 12/30\n",
-      "25/25 - 0s - loss: 2.2799 - sparse_categorical_accuracy: 0.9987 - val_loss: 2.2783 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2787 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2775 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 13/30\n",
-      "25/25 - 0s - loss: 2.2770 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2752 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2759 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2746 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 14/30\n",
-      "25/25 - 0s - loss: 2.2737 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2718 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2728 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2715 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 15/30\n",
-      "25/25 - 0s - loss: 2.2702 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2681 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2694 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2680 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 16/30\n",
-      "25/25 - 0s - loss: 2.2663 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2639 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2657 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2640 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 17/30\n",
-      "25/25 - 0s - loss: 2.2620 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2593 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2615 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2596 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 18/30\n",
-      "25/25 - 0s - loss: 2.2571 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2540 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2567 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2546 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 19/30\n",
-      "25/25 - 0s - loss: 2.2515 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2478 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2512 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2487 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 20/30\n",
-      "25/25 - 0s - loss: 2.2450 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2406 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2447 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2417 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 21/30\n",
-      "25/25 - 0s - loss: 2.2372 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2320 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2370 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2333 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 22/30\n",
-      "25/25 - 0s - loss: 2.2277 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2213 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2275 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2229 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 23/30\n",
-      "25/25 - 0s - loss: 2.2159 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2076 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.2156 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.2095 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 24/30\n",
-      "25/25 - 0s - loss: 2.2004 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.1894 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.1999 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.1916 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 25/30\n",
-      "25/25 - 0s - loss: 2.1793 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.1638 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.1784 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.1663 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 26/30\n",
-      "25/25 - 0s - loss: 2.1488 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.1254 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.1468 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.1278 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 27/30\n",
-      "25/25 - 0s - loss: 2.1008 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.0622 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.0963 - sparse_categorical_accuracy: 1.0000 - val_loss: 2.0633 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 28/30\n",
-      "25/25 - 0s - loss: 2.0182 - sparse_categorical_accuracy: 1.0000 - val_loss: 1.9499 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 2.0077 - sparse_categorical_accuracy: 1.0000 - val_loss: 1.9467 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 29/30\n",
-      "25/25 - 0s - loss: 1.8747 - sparse_categorical_accuracy: 1.0000 - val_loss: 1.7712 - val_sparse_categorical_accuracy: 1.0000\n",
+      "25/25 - 0s - loss: 1.8547 - sparse_categorical_accuracy: 1.0000 - val_loss: 1.7646 - val_sparse_categorical_accuracy: 1.0000\n",
       "Epoch 30/30\n",
-      "25/25 - 0s - loss: 1.6944 - sparse_categorical_accuracy: 1.0000 - val_loss: 1.6114 - val_sparse_categorical_accuracy: 1.0000\n"
+      "25/25 - 0s - loss: 1.6748 - sparse_categorical_accuracy: 1.0000 - val_loss: 1.6114 - val_sparse_categorical_accuracy: 1.0000\n"
      ]
     }
    ],
@@ -278,7 +278,7 @@
      "output_type": "stream",
      "text": [
       "7/7 [==============================] - 0s 1ms/step - loss: 1.6114 - sparse_categorical_accuracy: 1.0000\n",
-      "test loss, test acc: [1.6113744974136353, 1.0]\n"
+      "test loss, test acc: [1.611357569694519, 1.0]\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -319,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "['', '', '', '', '']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,27 @@
     "git checkout {new_branch}\n",
     "'''.format(key=item_dict['key'], new_branch=key)\n",
     "\n",
-    "\n"
+    "run_cmd(cmd_lis)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0w2jsKym8GjaDhipfpFCVg\u001b[m\n",
+      "* \u001b[32mmain\u001b[m\n",
+      "  \u001b[31mremotes/origin/HEAD\u001b[m -> origin/main\n",
+      "  \u001b[31mremotes/origin/main\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git branch -a"
    ]
   },
   {
