--- a/client/client_train.ipynb
+++ b/client/client_train.ipynb
@@ -319,16 +319,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['', '', '', '', '']"
+       "['',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '[main 5f0046e] new branck for client\\n 2 files changed, 56 insertions(+), 36 deletions(-)\\n create mode 100644 client/0w2jsKym8GjaDhipfpFCVg.pbz2\\n',\n",
+       " '',\n",
+       " '']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,8 +347,10 @@
     "\n",
     "cmd_lis = '''git clone https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git\n",
     "git branch {key}\n",
-    "git fetch\n",
     "git checkout {new_branch}\n",
+    "git add .\n",
+    "git commit -m'new branck for client'\n",
+    "git push https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git\n",
     "'''.format(key=item_dict['key'], new_branch=key)\n",
     "\n",
     "run_cmd(cmd_lis)\n"
@@ -349,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
