server aggregate process

--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -2,7 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32768"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.popen('git clone https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git').read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +31,51 @@
     "from tensorflow.keras.layers import (Input, Dense, Dropout, Activation,\n",
     "                                     BatchNormalization, Flatten,\n",
     "                                     Conv2D, MaxPooling2D)\n",
-    "from utils import compressed_cpickle"
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "\n",
+    "from federated_aia_test.utils import compressed_cpickle, decompress_cpickle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 移動到federated_aia_test floder\n",
+    "如果不存在，請先執行setup.py建立環境"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/git/FL_June/server/federated_aia_test\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'federated_aia_test' in os.listdir():\n",
+    "    os.chdir('federated_aia_test')\n",
+    "    print(os.getcwd())\n",
+    "else:\n",
+    "    print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 建立新的初始化global model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,96 +109,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = simplecnn()\n",
-    "\n",
-    "# weight、架構 (json) to pickle\n",
-    "\n",
-    "model_attri = {'weights':model.get_weights(), 'json':model.to_json()}\n",
-    "\n",
-    "compressed_cpickle('./federated_aia_test/global_model', model_attri)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/git/FL_June/server/federated_aia_test\n"
+      "global model already exist\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "if 'federated_aia_test' in os.listdir():\n",
-    "    os.chdir('federated_aia_test')\n",
-    "    print(os.getcwd())\n",
+    "if 'global_model.pbz2' not in os.listdir():\n",
+    "    model = simplecnn()\n",
+    "\n",
+    "    # weight、架構 (json) to pickle\n",
+    "\n",
+    "    model_attri = {'weights':model.get_weights(), 'json':model.to_json()}\n",
+    "\n",
+    "    compressed_cpickle('./federated_aia_test/global_model', model_attri)\n",
     "else:\n",
-    "    print(os.getcwd())"
+    "    print('global model already exist')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 下載各個branch中的模型壓縮檔"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['  origin/2f84crgk-wqhuG8rhLwAVA', '  origin/Xlzc01o8h0_DP0-6UpKPOw', '  origin/z8kBrvA23Q0pT21uGYQ_bA']\n"
+      "['  origin/QHkAXl3kpHN8FBJ2Xi_qZA', '  origin/Xlzc01o8h0_DP0-6UpKPOw']\n"
      ]
     }
    ],
    "source": [
+    "os.popen('git remote update origin --prune')\n",
     "lis = os.popen('git branch -r').read().split('\\n')[:-1]\n",
     "\n",
-    "# contain_except = lambda lis:\n",
+    "\n",
     "all_client_branch = [i for i in  lis if not i.__contains__('master')]\n",
-    "# all_client_branch\n",
+    "\n",
     "print(all_client_branch)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "origin/QHkAXl3kpHN8FBJ2Xi_qZA QHkAXl3kpHN8FBJ2Xi_qZA.pbz2\n",
       "\n",
-      "\n",
+      "origin/Xlzc01o8h0_DP0-6UpKPOw Xlzc01o8h0_DP0-6UpKPOw.pbz2\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "run_cmd = lambda cmd_lis:[os.popen(i).read() for i in cmd_lis.split('\\n')]\n",
+    "\n",
     "for i in all_client_branch:\n",
-    "    branch_name = i.split('/')[-1]\n",
-    "    result = os.popen('git checkout '+branch_name+' {model_attri}'.format(model_attri=branch_name+'.pbz2')\n",
-    "            ).read()\n",
+    "    origin_branch_name = i.lstrip()\n",
+    "    filename = origin_branch_name.split('/')[-1]+'.pbz2'\n",
+    "    \n",
+    "    print(origin_branch_name, filename)\n",
+    "    \n",
+    "    \n",
+    "    cmd_lis = '''git checkout remotes/{branch_name} {model_attri_pbz2}\n",
+    "    '''.format(branch_name = origin_branch_name, model_attri_pbz2=filename)\n",
+    "    result = os.popen(cmd_lis).read()\n",
     "    print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -146,11 +205,10 @@
      "output_type": "stream",
      "text": [
       "* \u001b[32mmaster\u001b[m\n",
-      "  \u001b[31mremotes/origin/2f84crgk-wqhuG8rhLwAVA\u001b[m\n",
       "  \u001b[31mremotes/origin/HEAD\u001b[m -> origin/master\n",
+      "  \u001b[31mremotes/origin/QHkAXl3kpHN8FBJ2Xi_qZA\u001b[m\n",
       "  \u001b[31mremotes/origin/Xlzc01o8h0_DP0-6UpKPOw\u001b[m\n",
-      "  \u001b[31mremotes/origin/master\u001b[m\n",
-      "  \u001b[31mremotes/origin/z8kBrvA23Q0pT21uGYQ_bA\u001b[m\n"
+      "  \u001b[31mremotes/origin/master\u001b[m\n"
      ]
     }
    ],
@@ -159,8 +217,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 聚合並更新global model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Xlzc01o8h0_DP0-6UpKPOw.pbz2', 'QHkAXl3kpHN8FBJ2Xi_qZA.pbz2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_attri = decompress_cpickle('./global_model.pbz2')\n",
+    "global_model = tf.keras.models.model_from_json(model_attri['json'])\n",
+    "\n",
+    "lis = [i for i in os.listdir() if i.__contains__('pbz2')]\n",
+    "lis.remove('global_model.pbz2')\n",
+    "print(lis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights = []\n",
+    "for i in lis:\n",
+    "    model_attri = decompress_cpickle(i)\n",
+    "    weights.append(model_attri['weights'])\n",
+    "print(np.shape(weights))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_weights = list()\n",
+    "if len(weights) == 0:\n",
+    "    print('no new client to aggregate')\n",
+    "    pass\n",
+    "elif len(weights) == 1:\n",
+    "    print('only single participant')\n",
+    "    new_weights = weights[0]\n",
+    "else:\n",
+    "    for i in zip(*weights):\n",
+    "        new_weights.append(tf.reduce_sum(i, axis=0))\n",
+    "        \n",
+    "global_model.set_weights(model_attri['weights'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_attri = {'weights':global_model.get_weights(), 'json':global_model.to_json()}\n",
+    "\n",
+    "compressed_cpickle('./global_model', model_attri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -168,11 +307,10 @@
      "output_type": "stream",
      "text": [
       "* master\n",
-      "  remotes/origin/2f84crgk-wqhuG8rhLwAVA\n",
       "  remotes/origin/HEAD -> origin/master\n",
+      "  remotes/origin/QHkAXl3kpHN8FBJ2Xi_qZA\n",
       "  remotes/origin/Xlzc01o8h0_DP0-6UpKPOw\n",
       "  remotes/origin/master\n",
-      "  remotes/origin/z8kBrvA23Q0pT21uGYQ_bA\n",
       "\n"
      ]
     }
@@ -182,35 +320,16 @@
     "\n",
     "run_cmd = lambda cmd_lis:[os.popen(i).read() for i in cmd_lis.split('\\n')]\n",
     "\n",
-    "cmd_lis = '''git add .\n",
-    "git commit -m'main branch'\n",
+    "cmd_lis = '''mv ./global_model.pbz2 ../\n",
+    "rm *.pbz2\n",
+    "mv ../global_model.pbz2 ./\n",
+    "git add .\n",
+    "git commit -m'global model complete aggregate and update to g'\n",
     "git push https://at102091:12345678@gitlab.aiacademy.tw/junew/federated_aia_test.git\n",
     "'''\n",
+    "run_cmd(cmd_lis)\n",
     "branch = os.popen('git branch -a').read()\n",
     "print(branch)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['',\n",
-       " \"On branch master\\nYour branch is up-to-date with 'origin/master'.\\nnothing to commit, working directory clean\\n\",\n",
-       " '',\n",
-       " '']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "run_cmd(cmd_lis)"
    ]
   },
   {
